--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   
   <title>QR code component</title>
 
@@ -18,7 +18,7 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
-    .contanier{
+    .container{
       width: 100%;
       min-height: 100vh;
       background-color: hsl(212, 45%, 89%);
@@ -77,10 +77,10 @@
 </head>
 <body>
 
-  <div class="contanier flex">
+  <div class="container flex">
     <div class="card flex">
       <div class="card_img center">
-        <img src="./images/image-qr-code.png" alt="QR Code Scan">
+        <img src="./image-qr-code.png" alt="QR Code Scan">
       </div>
       <div class="text">
         <p class="bold center">
