--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="container flex">
     <div class="card flex">
       <div class="card_img center">
-        <img src="./image-qr-code.png" alt="QR Code Scan">
+        <img src="image-qr-code.png" alt="QR Code Scan">
       </div>
       <div class="text">
         <p class="bold center">
